--- a/index.html
+++ b/index.html
@@ -1,43 +1,31 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfólio - Marcelo Heck | Automation Developer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    /* ======== VARIÁVEIS DE CORES ======== */
+    /* ===== VARIÁVEIS DE CORES ===== */
     :root {
-      --bg-color: #f5f5f5;
+      --bg-color: #f9f9fb;
+      --header-bg: #e0e7ff;
       --card-bg: #ffffff;
       --accent: #4c8bf5;
-      --text: #333333;
-      --subtext: #666666;
+      --text: #1f1f23;
+      --subtext: #555555;
       --btn-hover: #3b6cd9;
-      --shadow-light: rgba(0, 0, 0, 0.08);
-      --shadow-dark: rgba(0, 0, 0, 0.15);
+      --shadow-light: rgba(0, 0, 0, 0.06);
+      --shadow-dark: rgba(0, 0, 0, 0.12);
       --header-height: 80px;
     }
 
-    /* ======== ESTILO GERAL ======== */
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    /* ===== RESET ===== */
+    * { box-sizing: border-box; margin:0; padding:0; }
+    body { font-family: 'Roboto', sans-serif; background-color: var(--bg-color); color: var(--text); line-height:1.6; scroll-behavior: smooth; }
+    a { text-decoration: none; }
 
-    body {
-      font-family: "Segoe UI", Roboto, sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text);
-      line-height: 1.6;
-      scroll-behavior: smooth;
-    }
-
-    a {
-      text-decoration: none;
-    }
-
-    /* ======== NAV FIXO ======== */
+    /* ===== NAV FIXA ===== */
     nav {
       position: fixed;
       top: 0;
@@ -50,198 +38,79 @@
       align-items: center;
       box-shadow: 0 2px 10px var(--shadow-light);
       z-index: 1000;
-      transition: background 0.3s;
     }
-
     nav a {
       color: var(--accent);
       margin: 0 20px;
       font-weight: 500;
-      transition: color 0.3s;
+      font-size: 1em;
+      transition: color 0.3s, transform 0.2s;
     }
+    nav a:hover { color: var(--btn-hover); transform: scale(1.1); }
 
-    nav a:hover {
-      color: var(--btn-hover);
-    }
-
-    /* ======== HEADER ======== */
+    /* ===== HEADER PARALLAX ===== */
     header {
-      background: linear-gradient(90deg, #e0e7ff, #c7d2fe);
+      background: linear-gradient(180deg, var(--header-bg) 0%, #ffffff 100%);
       text-align: center;
-      padding: 150px 20px 80px 20px; /* espaço para nav fixa */
+      padding: 160px 20px 100px 20px;
+      background-attachment: fixed;
       transition: padding 0.3s;
     }
+    header h1 { font-size: 3em; color: var(--accent); margin-bottom: 15px; }
+    header p { color: var(--subtext); font-size: 1.2em; }
 
-    header h1 {
-      font-size: 2.8em;
-      color: var(--accent);
-      margin-bottom: 10px;
-      transition: transform 0.3s;
-    }
-
-    header p {
-      color: var(--subtext);
-      font-size: 1.2em;
-    }
-
-    header:hover h1 {
-      transform: scale(1.05);
-    }
-
-    /* ======== SEÇÃO PROJETOS ======== */
-    section {
-      max-width: 1100px;
-      margin: 60px auto;
+    /* ===== SEÇÃO SOBRE MIM ===== */
+    #sobre {
+      max-width: 900px;
+      margin: 80px auto;
       padding: 0 20px;
-    }
-
-    h2 {
       text-align: center;
-      color: var(--accent);
-      font-size: 2em;
-      margin-bottom: 40px;
-      position: relative;
     }
+    #sobre h2 { color: var(--accent); font-size: 2em; margin-bottom: 20px; position: relative; }
+    #sobre h2::after { content:""; display:block; width:60px; height:4px; background-color: var(--accent); margin:10px auto 0 auto; border-radius:2px; }
+    #sobre p { color: var(--subtext); font-size:1em; margin-bottom:30px; }
+    .skills { display: flex; flex-wrap: wrap; justify-content:center; gap:20px; margin-top:30px; }
+    .skill { width:180px; text-align:left; }
+    .skill span { display:block; font-weight:500; margin-bottom:5px; color: var(--text); }
+    .skill-bar { width:100%; height:8px; background-color:#ddd; border-radius:4px; overflow:hidden; }
+    .skill-bar-inner { width:0; height:100%; background-color: var(--accent); border-radius:4px; transition: width 1.2s ease; }
 
-    h2::after {
-      content: "";
-      display: block;
-      width: 60px;
-      height: 4px;
-      background-color: var(--accent);
-      margin: 10px auto 0 auto;
-      border-radius: 2px;
+    /* ===== SEÇÃO PROJETOS ===== */
+    section#projetos { max-width:1100px; margin:80px auto; padding:0 20px; }
+    #projetos h2 { text-align:center; color: var(--accent); font-size:2.2em; margin-bottom:40px; position:relative; }
+    #projetos h2::after { content:""; display:block; width:60px; height:4px; background-color: var(--accent); margin:10px auto 0 auto; border-radius:2px; }
+    .grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(260px,1fr)); gap:30px; }
+
+    .card { background-color: var(--card-bg); border-radius:16px; overflow:hidden; box-shadow:0 2px 8px var(--shadow-light); opacity:0; transform:translateY(30px); transition: all 0.8s ease-out; text-align:center; padding-bottom:20px; }
+    .card.visible { opacity:1; transform:translateY(0); }
+    .card:hover { transform: translateY(-8px) scale(1.02); box-shadow: 0 10px 20px var(--shadow-dark); }
+    .card img { width:60px; height:60px; object-fit:contain; margin:20px auto 0 auto; display:block; transition: transform 0.3s ease; }
+    .card:hover img { transform: scale(1.1); }
+    .card h3 { color: var(--accent); margin:15px 0 10px; font-size:1.3em; }
+    .card p { color: var(--subtext); font-size:0.95em; margin-bottom:15px; }
+    .btn { display:inline-block; padding:10px 18px; background-color: var(--accent); color:white; border-radius:8px; font-weight:500; transition: all 0.3s ease; }
+    .btn:hover { background-color: var(--btn-hover); transform: scale(1.05); }
+
+    /* ===== FOOTER ===== */
+    footer { text-align:center; padding:50px 20px; border-top:1px solid #ddd; color: var(--subtext); font-size:0.95em; background-color: var(--bg-color); }
+    footer a { color: var(--accent); transition: color 0.3s ease; }
+    footer a:hover { color: var(--btn-hover); text-decoration:underline; }
+
+    /* ===== RESPONSIVIDADE ===== */
+    @media(max-width:768px) {
+      header{padding:140px 15px 80px 15px;}
+      header h1{font-size:2.4em;}
+      #projetos h2{font-size:1.8em;}
+      .card img{width:50px;height:50px;}
+      .skill{width:45%;}
     }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-    }
-
-    /* ======== CARDS COM FADE-IN ======== */
-    .card {
-      background-color: var(--card-bg);
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 2px 8px var(--shadow-light);
-      opacity: 0;
-      transform: translateY(30px);
-      transition: all 0.8s ease-out;
-    }
-
-    .card.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .card:hover {
-      transform: translateY(-10px) scale(1.03);
-      box-shadow: 0 12px 25px var(--shadow-dark);
-    }
-
-    .card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-      border-bottom: 1px solid #ddd;
-      transition: transform 0.4s ease;
-    }
-
-    .card:hover img {
-      transform: scale(1.05);
-    }
-
-    .card-content {
-      padding: 20px;
-    }
-
-    .card h3 {
-      color: var(--accent);
-      margin-bottom: 10px;
-      font-size: 1.4em;
-    }
-
-    .card p {
-      color: var(--subtext);
-      font-size: 0.95em;
-      margin-bottom: 15px;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 12px 20px;
-      background-color: var(--accent);
-      color: white;
-      border-radius: 8px;
-      font-weight: 500;
-      transition: all 0.3s ease;
-    }
-
-    .btn:hover {
-      background-color: var(--btn-hover);
-      transform: scale(1.05);
-    }
-
-    /* ======== FOOTER ======== */
-    footer {
-      text-align: center;
-      padding: 50px 20px;
-      border-top: 1px solid #ddd;
-      color: var(--subtext);
-      font-size: 0.95em;
-      background-color: var(--bg-color);
-    }
-
-    footer a {
-      color: var(--accent);
-      transition: color 0.3s ease;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-      color: var(--btn-hover);
-    }
-
-    /* ======== RESPONSIVIDADE ======== */
-    @media (max-width: 768px) {
-      header {
-        padding: 130px 15px 80px 15px;
-      }
-
-      header h1 {
-        font-size: 2.2em;
-      }
-
-      h2 {
-        font-size: 1.8em;
-      }
-
-      .card img {
-        height: 150px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      header {
-        padding: 110px 10px 70px 10px;
-      }
-
-      header h1 {
-        font-size: 1.8em;
-      }
-
-      h2 {
-        font-size: 1.5em;
-      }
-
-      .card img {
-        height: 130px;
-      }
-
-      nav a {
-        margin: 0 10px;
-      }
+    @media(max-width:480px){
+      header{padding:120px 10px 70px 10px;}
+      header h1{font-size:2em;}
+      #projetos h2{font-size:1.5em;}
+      .card img{width:40px;height:40px;}
+      .skill{width:100%;}
+      nav a{margin:0 12px;}
     }
   </style>
 </head>
@@ -249,81 +118,105 @@
 
   <!-- NAV FIXA -->
   <nav>
+    <a href="#sobre">Sobre</a>
     <a href="#projetos">Projetos</a>
     <a href="#footer">Contato</a>
   </nav>
 
+  <!-- HEADER -->
   <header>
     <h1>Marcelo Heck</h1>
     <p>Automation Developer | Soluções em Python e Automação de Tarefas</p>
   </header>
 
+  <!-- SOBRE MIM -->
+  <section id="sobre">
+    <h2>Sobre Mim</h2>
+    <p>Sou Automation Developer especializado em soluções com Python, automação de tarefas e criação de aplicações que tornam processos mais eficientes e inteligentes.</p>
+    <div class="skills">
+      <div class="skill">
+        <span>Python</span>
+        <div class="skill-bar"><div class="skill-bar-inner" data-width="90%"></div></div>
+      </div>
+      <div class="skill">
+        <span>Automação</span>
+        <div class="skill-bar"><div class="skill-bar-inner" data-width="85%"></div></div>
+      </div>
+      <div class="skill">
+        <span>Git/GitHub</span>
+        <div class="skill-bar"><div class="skill-bar-inner" data-width="80%"></div></div>
+      </div>
+      <div class="skill">
+        <span>Excel/BI</span>
+        <div class="skill-bar"><div class="skill-bar-inner" data-width="75%"></div></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- PROJETOS -->
   <section id="projetos">
     <h2>Projetos em Destaque</h2>
     <div class="grid">
       <!-- Projeto 1 -->
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/1170/1170627.png" alt="Conciliador de Extratos">
-        <div class="card-content">
-          <h3>Conciliador de Extratos</h3>
-          <p>Ferramenta em Python para comparação automática de extratos bancários, destacando divergências de forma inteligente.</p>
-          <a href="https://github.com/marcelloheck-arch/Conciliacao" target="_blank" class="btn">Ver no GitHub</a>
-        </div>
+        <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Conciliador de Extratos">
+        <h3>Conciliador de Extratos</h3>
+        <p>Ferramenta em Python para comparação automática de extratos bancários, destacando divergências de forma inteligente.</p>
+        <a href="https://github.com/marcelloheck-arch/Conciliacao" target="_blank" class="btn">Ver no GitHub</a>
       </div>
-
       <!-- Projeto 2 -->
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/2991/2991112.png" alt="Junta PDF">
-        <div class="card-content">
-          <h3>Junta PDF</h3>
-          <p>Aplicação prática que permite unir vários arquivos PDF em um único documento de forma simples e rápida.</p>
-          <a href="https://github.com/marcelloheck-arch/JuntaPdf" target="_blank" class="btn">Ver no GitHub</a>
-        </div>
+        <img src="https://cdn-icons-png.flaticon.com/512/337/337946.png" alt="Junta PDF">
+        <h3>Junta PDF</h3>
+        <p>Aplicação prática que permite unir vários arquivos PDF em um único documento de forma simples e rápida.</p>
+        <a href="https://github.com/marcelloheck-arch/JuntaPdf" target="_blank" class="btn">Ver no GitHub</a>
       </div>
-
       <!-- Projeto 3 -->
       <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/992/992651.png" alt="Jogo Spa">
-        <div class="card-content">
-          <h3>Jogo Spa</h3>
-          <p>Mini game desenvolvido em Python para fins educativos e de entretenimento, usando lógica e design intuitivo.</p>
-          <a href="https://github.com/marcelloheck-arch/JogoSpa" target="_blank" class="btn">Ver no GitHub</a>
-        </div>
+        <img src="https://cdn-icons-png.flaticon.com/512/1055/1055687.png" alt="Jogo Spa">
+        <h3>Jogo Spa</h3>
+        <p>Mini game desenvolvido em Python para fins educativos e de entretenimento, usando lógica e design intuitivo.</p>
+        <a href="https://github.com/marcelloheck-arch/JogoSpa" target="_blank" class="btn">Ver no GitHub</a>
       </div>
-
       <!-- Projeto 4 -->
       <div class="card">
         <img src="https://cdn-icons-png.flaticon.com/512/992/992700.png" alt="Calculadora Python">
-        <div class="card-content">
-          <h3>Calculadora</h3>
-          <p>Projeto em Python que implementa uma calculadora funcional com interface simples e fácil de usar.</p>
-          <a href="https://github.com/marcelloheck-arch/calculadora" target="_blank" class="btn">Ver no GitHub</a>
-        </div>
+        <h3>Calculadora</h3>
+        <p>Projeto em Python que implementa uma calculadora funcional com interface simples e fácil de usar.</p>
+        <a href="https://github.com/marcelloheck-arch/calculadora" target="_blank" class="btn">Ver no GitHub</a>
       </div>
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer id="footer">
     © 2025 Marcelo Heck | <a href="https://github.com/marcelloheck-arch" target="_blank">GitHub</a> · 
     <a href="https://www.linkedin.com/in/marcelo-heck" target="_blank">LinkedIn</a>
   </footer>
 
+  <!-- SCRIPT ANIMAÇÃO -->
   <script>
-    // FADE-IN DOS CARDS AO SCROLL
+    // FADE-IN DOS CARDS
     const cards = document.querySelectorAll('.card');
-
     const observer = new IntersectionObserver(entries => {
       entries.forEach(entry => {
-        if (entry.isIntersecting) {
+        if(entry.isIntersecting){
           entry.target.classList.add('visible');
         }
       });
-    }, {
-      threshold: 0.2
-    });
-
+    }, { threshold: 0.2 });
     cards.forEach(card => observer.observe(card));
+
+    // ANIMAÇÃO DAS BARRAS DE HABILIDADE
+    const skillBars = document.querySelectorAll('.skill-bar-inner');
+    const skillObserver = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if(entry.isIntersecting){
+          entry.target.style.width = entry.target.dataset.width;
+        }
+      });
+    }, { threshold: 0.5 });
+    skillBars.forEach(bar => skillObserver.observe(bar));
   </script>
 </body>
 </html>
-
