--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8" />
@@ -50,6 +50,9 @@ header {
   text-align: center;
   padding: 180px 20px 100px 20px;
   transition: padding 0.3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 header .profile-photo {
   width: 160px;
@@ -195,7 +198,7 @@ footer a:hover { color: var(--accent-dark); text-decoration:underline; }
 </nav>
 
 <header>
-  <img src="IMG_20251007_154856_587.jpg" alt="Foto Marcelo Heck" class="profile-photo">
+  <img src="IMG_20251007_154856_587~2.jpg" alt="Foto Marcelo Heck" class="profile-photo">
   <h1>Marcelo Heck</h1>
   <p>Automation Developer | Soluções em Python e Automação de Tarefas</p>
 </header>
@@ -247,3 +250,4 @@ skillBars.forEach(bar => skillObserver.observe(bar));
 </script>
 </body>
 </html>
+
